--- a/src/renderer/index.css
+++ b/src/renderer/index.css
@@ -1,9 +1,12 @@
+/* Import Noto Sans SC from Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Noto Sans SC', system-ui, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
